@@ -81,6 +81,7 @@ Data Changes:
 - Removed Psychmetry metamagic requirement from Sympathetic Linking metamagic.
 - Added a custom dataset for the provisional Shifter errata.
 - Fixed Evo Proletarian not properly getting the Rigger Interface mod.
+- Fixed Spirit Hunter rank 2 and 3 not correctly requiring Astral Combat 6/8 for Adepts. Closes #5093
 
 Changed/New Strings:
 - LimitCondition_SkillsActiveLeadership
